<resources>
    <string name="app_name">GraineDeCopeauxMobile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Play</string>
    <string name="title_profil">Profil</string>
    <string name="graine_de_copeaux">Graine de Copeaux</string>
    <string name="your_data_will_be_displayed_here">Your Data will be Displayed here</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="clear">Clear</string>
    <string name="textwelcome">Bienvenue, </string>
    <string name="title_login">Login</string>
    <string name="txt_home_g2c">Graine de copeaux</string>
    <string name="logo_home_g2c">logoG2C</string>
    <string name ="logo_youtube_g2c">logoYoutubeG2C</string>
    <string name ="logo_instagram_g2c">logoInstagramG2C</string>
    <string name ="text_utilisateur">Visiteur</string>
    <string name="text_home_description">Apprendre la menuiserie en s\'amusant !</string>
    <string name="btn_login">Connexion</string>
    <string name="rang">Rang: </string>
    <string name="badge">Badge acquis: </string>
    <string name="img_rang">Rang</string>
    <string name="assemblage_question">Quel méthode d\'assemblage n\'existe pas ?</string>
    <string name="reponseAssemblage1">Assemblage à fourchette</string>
    <string name="reponseAssemblage2">Assemblage à Mi-bois</string>
    <string name="reponseAssemblage3">Assemblage en sifflet</string>
    <string name="reponseAssemblage4">Assemblage en doigts de gant</string>
    <string name="valider">Valider</string>
    <string name="retour">retour</string>
    <string name="dechet_question">La colle est un déchet :</string>
    <string name="reponseDechet1">inerte</string>
    <string name="reponseDechet2">recyclabe</string>
    <string name="reponseDechet3">dangeureux</string>
    <string name="reponseDechet4">propre</string>
    <string name="recyclage_question">Combien de bennes différentes le lycée utilise-t\'il ?</string>
    <string name="reponseRecyclage1">5</string>
    <string name="reponseRecyclage2">4</string>
    <string name="reponseRecyclage3">6</string>
    <string name="reponseRecyclage4">21</string>
    <string name="calepinage_question">Comment faire un calepinage ?</string>
    <string name="reponseCalepinage1">On place en premier les pièces les plus longues ?</string>
    <string name="reponseCalepinage2">On place en dernier les pièces les plus longues ?</string>
    <string name="reponseCalepinage3">On ne fait pas attention à l\'épaisseur.</string>
    <string name="reponseCalepinage4">On place les pièces comme on veut</string>
    <string name="qcm_assemblage">QCM Assemblage</string>
    <string name="qcm_calepinage">Qcm Calepinage</string>
    <string name="qcm_d_chet">QCM Déchet</string>
    <string name="qcm_recyclage">QCM Recyclage</string>

</resources>